--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -2,11 +2,14 @@
 
 <h1>Authors</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Given name</th>
       <th>Family name</th>
+      <th>Released books</th>
+      <th>Avg. Pages</th>
+      <th>Written Pages</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +19,8 @@
       <tr>
         <td><%= author.given_name %></td>
         <td><%= author.family_name %></td>
+        <td><%= @author_data[author.id] ? @author_data[author.id][:books] : 0 %></td>
+        <td><%= @author_data[author.id] ? @author_data[author.id][:pages] : 0 %></td>
         <td><%= link_to 'Show', author %></td>
         <td><%= link_to 'Edit', edit_author_path(author) %></td>
         <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
