--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,6 @@
     <tr>
       <th>ISBN</th>
       <th>Title</th>
-      <th>Author</th>
       <th>Pages</th>
       <th>Price</th>
       <th>Recommended Age</th>
@@ -20,7 +19,6 @@
       <tr>
         <td><%= book.isbn %></td>
         <td><%= book.title %></td>
-        <td><%= book.author.full_name if book.author %></td>
         <td><%= book.pages %></td>
         <td><%= book.price %></td>
         <td><%= book.minimum_age %>–<%= book.maximum_age %></td>
@@ -36,11 +34,13 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Author</th>
       <th>Isbn</th>
       <th>Abstract</th>
       <th>Pages</th>
       <th>Price</th>
       <th>Released at</th>
+      <th>Avg. Score</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -49,11 +49,13 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
+        <td><%= book.author.full_name if book.author %></td>
         <td><%= book.isbn %></td>
         <td><%= book.abstract %></td>
         <td><%= book.pages %></td>
         <td><%= book.price %></td>
         <td><%= book.released_at %></td>
+        <td><%= book.reviews.count > 0 ? book.reviews.avg(:score).round(1) : "-" %></td>
         <td><%= link_to 'Show', book_path(book) %></td>
         <td><%= link_to 'Destroy', book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
